# real-estate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  infer.py  inference.py  pyproject.toml  train.py
conf/: config.yaml
conf/lgbm/: best_model.yaml
conf/mlflow/: local.yaml  local_docker.yaml
outputs/2024-01-03/16-39-27/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-03/16-39-40/.hydra/: hydra.yaml
outputs/2024-01-03/16-40-09/.hydra/: hydra.yaml
outputs/2024-01-03/16-40-26/.hydra/: hydra.yaml
outputs/2024-01-03/16-41-12/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-03/16-44-32/.hydra/: hydra.yaml
outputs/2024-01-03/16-46-49/.hydra/: hydra.yaml
outputs/2024-01-03/16-47-45/.hydra/: hydra.yaml
outputs/2024-01-03/16-53-38/.hydra/: hydra.yaml
outputs/2024-01-03/16-54-29/.hydra/: hydra.yaml
outputs/2024-01-03/16-55-06/.hydra/: hydra.yaml
outputs/2024-01-04/12-14-19/.hydra/: hydra.yaml
outputs/2024-01-04/12-15-59/.hydra/: hydra.yaml
outputs/2024-01-04/12-18-00/.hydra/: hydra.yaml
outputs/2024-01-04/12-21-10/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-04/12-33-11/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-04/12-33-54/.hydra/: hydra.yaml
outputs/2024-01-04/12-34-53/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-04/12-35-47/.hydra/: hydra.yaml
outputs/2024-01-04/12-38-59/.hydra/: hydra.yaml
outputs/2024-01-04/13-04-59/.hydra/: hydra.yaml
outputs/2024-01-05/10-50-43/.hydra/: hydra.yaml
real_estate/: data_modifyer.py  scaler.py  train_val_split.py
(+4 files in other folders)
